// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar/> renders correctly if prop expanded set false 1`] = `
<aside
  className="SidebarStyled-cNuLyA dmLRca"
>
  <div
    className="SidebarBoxStyled-cPLKHs jnvUud"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop expanded set true 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set false 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set true 1`] = `
<aside
  className="SidebarStyled-cNuLyA rhHDn"
>
  <div
    className="SidebarBoxStyled-cPLKHs gxWuIC"
  >
    <button
      className="SidebarToggleStyled-iZPRsl hVORhQ"
      onClick={[Function]}
    >
      <div
        className="ToggleIconStyled-fcajSq bmEbEG"
        type="svg"
      >
        <div
          className="IconSvgStyled-kZHpyB imDkgw"
          color=""
          rotate={0}
          size="normal"
        >
          <svg
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
            />
          </svg>
        </div>
      </div>
      <div
        className="ToggleContentStyled-hUPJhx coxtcr"
      >
        <div
          className="ToggleTextStyled-iaoXGE ktjbMy"
        >
          Collapse
        </div>
      </div>
    </button>
  </div>
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set true and toggleButtonText set 1`] = `
<aside
  className="SidebarStyled-cNuLyA rhHDn"
>
  <div
    className="SidebarBoxStyled-cPLKHs gxWuIC"
  >
    <button
      className="SidebarToggleStyled-iZPRsl hVORhQ"
      onClick={[Function]}
    >
      <div
        className="ToggleIconStyled-fcajSq bmEbEG"
        type="svg"
      >
        <div
          className="IconSvgStyled-kZHpyB imDkgw"
          color=""
          rotate={0}
          size="normal"
        >
          <svg
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
            />
          </svg>
        </div>
      </div>
      <div
        className="ToggleContentStyled-hUPJhx coxtcr"
      >
        <div
          className="ToggleTextStyled-iaoXGE ktjbMy"
        >
          test
        </div>
      </div>
    </button>
  </div>
</aside>
`;

exports[`<Sidebar/> renders correctly if prop right set false 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop right set true 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop spread set true 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly with default props 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<SidebarRegion/> renders correctly if prop bordered 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy jCwGgr"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop scrollable 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy dqAWnm"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop scrollableMinHeight set 0 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy fyvkV"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop spread 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy laneCa"
/>
`;

exports[`<SidebarRegion/> renders correctly with default props 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy fyvkV"
/>
`;

exports[`<SidebarToggle/> renders correctly if prop toggleButtonText set 1`] = `
<button
  className="SidebarToggleStyled-iZPRsl hVORhQ"
  onClick={[Function]}
>
  <div
    className="ToggleIconStyled-fcajSq gEgOLY"
    type="svg"
  >
    <div
      className="IconSvgStyled-kZHpyB imDkgw"
      color=""
      rotate={0}
      size="normal"
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
        />
      </svg>
    </div>
  </div>
  <div
    className="ToggleContentStyled-hUPJhx coxtcr"
  >
    <div
      className="ToggleTextStyled-iaoXGE dCzhpM"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<SidebarToggle/> renders correctly with default props 1`] = `
<button
  className="SidebarToggleStyled-iZPRsl hVORhQ"
  onClick={[Function]}
>
  <div
    className="ToggleIconStyled-fcajSq gEgOLY"
    type="svg"
  >
    <div
      className="IconSvgStyled-kZHpyB imDkgw"
      color=""
      rotate={0}
      size="normal"
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
        />
      </svg>
    </div>
  </div>
  <div
    className="ToggleContentStyled-hUPJhx coxtcr"
  >
    <div
      className="ToggleTextStyled-iaoXGE dCzhpM"
    >
      Collapse
    </div>
  </div>
</button>
`;
